[gd_scene load_steps=10 format=3 uid="uid://g3ivkoatyli8"]

[ext_resource type="Texture2D" uid="uid://k1o2nroluihr" path="res://Topdown+Assets/Topdown Assets/Sprites/Weapons/weapon_1_pistol.png" id="1_aoepw"]
[ext_resource type="Script" uid="uid://b3hffvagvsnw7" path="res://scenes/weapon_pickup.gd" id="1_bt436"]
[ext_resource type="Texture2D" uid="uid://b0d6xe0sreis5" path="res://Topdown+Assets/Topdown Assets/Sprites/Shadow.png" id="2_bt436"]
[ext_resource type="Texture2D" uid="uid://d0ioacy2yuqsg" path="res://Topdown+Assets/Topdown Assets/Sprites/tile_coin.png" id="3_setew"]
[ext_resource type="LabelSettings" uid="uid://hmyhvsayvsuf" path="res://scenes/new_label_settings.tres" id="4_nyn51"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jld4d"]
size = Vector2(391.429, 565.714)

[sub_resource type="Animation" id="Animation_u38rw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeraponSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeraponSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_1n6qs"]
resource_name = "idle"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeraponSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -100), Vector2(0, 40), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeraponSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1.3), Vector2(0.8, 1.3), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.4, 0.4), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2lby3"]
_data = {
&"RESET": SubResource("Animation_u38rw"),
&"idle": SubResource("Animation_1n6qs")
}

[node name="WeaponPickup" type="Area2D"]
scale = Vector2(0.35, 0.35)
collision_layer = 0
collision_mask = 2
script = ExtResource("1_bt436")

[node name="WeraponSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_aoepw")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.337255)
position = Vector2(0, 345.714)
texture = ExtResource("2_bt436")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.42854, 168.571)
shape = SubResource("RectangleShape2D_jld4d")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2lby3")
}
autoplay = "idle"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(350, 180)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = 462.857
offset_right = 175.0
offset_bottom = 642.857
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("3_setew")
expand_mode = 1
stretch_mode = 5

[node name="Price" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "100"
label_settings = ExtResource("4_nyn51")
vertical_alignment = 1

[node name="Buy" type="Label" parent="."]
visible = false
offset_left = -122.857
offset_top = -208.571
offset_right = 122.143
offset_bottom = -120.571
text = "Buy 'E\""
label_settings = ExtResource("4_nyn51")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
